update work section css

--- a/src/styles/work.scss
+++ b/src/styles/work.scss
@@ -37,7 +37,7 @@
       > img {
         border-radius: 20px;
         width: 40%;
-        object-fit: cover;
+        object-fit: fill;
       }
 
       > aside {
